Don't crash on empty strings in DataMatrixBarcode

BUG: 283300